--- a/src/global.css
+++ b/src/global.css
@@ -29,7 +29,8 @@
   .dark {
     --background: 20 14.3% 4.1%;
     --foreground: 0 0% 95%;
-    --card: 24 9.8% 10%;
+    /* --card: 24 9.8% 10%; */
+    --card: 0 0% 3.9%;
     --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
